--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,11 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title E-comerce page</title>
-    <!--There are some bugs, please fix those before start your solution-->
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>E-commerce Page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="src/styles/styles.css">
 </head>
+
 <body>
-    
+    <!-- NAVBAR -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-expanded="false">
+                        Shop
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Normal Stuff</a>
+                        <a class="dropdown-item" href="#">Fancy Stuff</a>
+                        <a class="dropdown-item" href="#">Even Fancier Stuff</a>
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Cart</button>
+            </form>
+        </div>
+    </nav>
+
+    <!-- JUMBOTRON -->
+
+    <div class="jumbotron jumbotron-fluid bg-black jumbotron-height">
+        <div class="container">
+            <h1 class="display-5 text-white text-center">Shop in Style</h1>
+            <p class="text-light-gray text-center">With this shop homepage template</p>
+        </div>
+    </div>
+
+    <!-- ROW
+    COLUMNS
+    CARDS -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-6">
+                <div class="card">
+                    <div class="wrapper">
+                        <img src="src/images/smartphone.png" class="card-img-top img-fluid wrapper-alto" alt="smartphone">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Smartphone</h5>
+                        <p class="card-text text-center mb-5">$1,000.00</p>
+                        <a href="#" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+                <div class="card">
+                    <div class="wrapper">
+                        <img src="src/images/laptop.png" class="card-img-top img-fluid wrapper-ancho" alt="laptop">
+                    </div>
+                    <div class="card-body">
+                        <p class="bg-dark text-white p-2 rounded sale">Sale</p>
+                        <h5 class="card-title text-center">Laptop</h5>
+                        <p class="card-text text-center mb-5"><span class="text-decoration-line-through text-light-gray">$1,600.00</span>$1,500.00</p>
+                        <a href="#" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+                <div class="card">
+                    <div class="wrapper">
+                        <img src="src/images/tablet.png" class="card-img-top img-fluid wrapper-alto" alt="tablet">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Tablet</h5>
+                        <p class="card-text text-center mb-5">$1,200.00</p>
+                        <a href="#" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+                <div class="card">
+                    <div class="wrapper">
+                        <img src="src/images/smart-tv.png" class="card-img-top img-fluid wrapper-ancho" alt="smart-tv">
+                    </div>
+                    <div class="card-body">
+                        <p class="bg-dark text-white p-2 rounded sale">Sale</p>
+                        <h5 class="card-title text-center">Smart TV</h5>
+                        <p class="card-text text-center mb-5"><span class="text-decoration-line-through text-light-gray">$2,200.00</span>$2,000.00</p>
+                        <a href="#" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+                <div class="card">
+                    <div class="wrapper">
+                        <img src="src/images/headphone.png" class="card-img-top img-fluid wrapper-alto" alt="headphone">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Headphone</h5>
+                        <p class="card-text text-center mb-5">$300.00</p>
+                        <a href="#" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+                <div class="card">
+                    <div class="wrapper">
+                        <img src="src/images/smartwatch.png" class="card-img-top img-fluid wrapper-ancho" alt="smartwatch">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Smartwatch</h5>
+                        <p class="card-text text-center mb-5">$400.00</p>
+                        <a href="#" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+                <div class="card">
+                    <div class="wrapper">
+                        <img src="src/images/speakers.png" class="card-img-top img-fluid wrapper-alto" alt="speakers">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Speakers</h5>
+                        <p class="card-text text-center mb-5">$300.00</p>
+                        <a href="#" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+                <div class="card">
+                    <div class="wrapper">
+                        <img src="src/images/keyboard.png" class="card-img-top img-fluid wrapper-ancho" alt="keyboard">
+                    </div>
+                    <div class="card-body">
+                        <p class="bg-dark text-white p-2 rounded sale">Sale</p>
+                        <h5 class="card-title text-center">Keyboard</h5>
+                        <p class="card-text text-center mb-5"><span class="text-decoration-line-through text-light-gray">$500.00</span>$400.00</p>
+                        <a href="#" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- JS -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
+
+
+</body>
+
 </html>
